--- a/Lab9/Lab9/MainWindow.xaml
+++ b/Lab9/Lab9/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Lab9.MainWindow"
          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Digital Circuits App" Height="450" Width="600">
+        Title="Digital Circuits App" Height="848" Width="1020">
     <Grid>
         <!-- Выбор типа элемента -->
         <ComboBox Name="ElementSelector" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="10" SelectionChanged="ElementSelector_SelectionChanged">
@@ -12,28 +12,37 @@
 
         <!-- Показ свойств выбранного элемента -->
         <StackPanel Orientation="Vertical" Margin="10" VerticalAlignment="Top" HorizontalAlignment="Right">
-            <TextBlock Text="Properties:" FontWeight="Bold" Margin="0,10,0,5"/>
-            <TextBlock Name="ElementName" Text="Name: " Margin="5"/>
-            <TextBlock Name="InputCount" Text="Input Count: " Margin="5"/>
-            <TextBlock Name="OutputCount" Text="Output Count: " Margin="5"/>
+            <TextBlock Text="Properties:" FontWeight="Bold" FontSize="20" Margin="0,10,0,5"/>
+            <TextBlock Name="ElementName" Text="Name: " FontSize="20" Margin="5"/>
+            <TextBlock Name="InputCount" Text="Input Count: " FontSize="20" Margin="5"/>
+            <TextBlock Name="OutputCount" Text="Output Count: " FontSize="20" Margin="5"/>
         </StackPanel>
 
         <!-- Поля для ввода значений входов -->
         <StackPanel Orientation="Vertical" Margin="10,100,10,10">
-            <TextBlock Text="Input Values (comma-separated):" FontWeight="Bold" Margin="5"/>
-            <TextBox Name="InputValues" Width="200" Margin="5"/>
-            
+            <TextBlock Text="Input Values (comma-separated):" FontWeight="Bold" FontSize="20" Margin="5"/>
+            <TextBox Name="InputValues" Width="200" FontSize="20" Margin="5"/>
+
             <!-- Кнопки управления элементом -->
-            <Button Name="SetInputsButton" Content="Set Inputs" Click="SetInputsButton_Click" Width="150" Margin="5"/>
-            <Button Name="ComputeButton" Content="Compute Output" Click="ComputeButton_Click" Width="150" Margin="5"/>
-            <Button Name="InvertButton" Content="Invert Output" Click="InvertButton_Click" Width="150" Margin="5"/>
-            <Button Name="ShiftButton" Content="Shift Register" Click="ShiftButton_Click" Width="150" Margin="5" Visibility="Collapsed"/>
+            <Button Name="SetInputsButton" Content="Set Inputs" Click="SetInputsButton_Click" FontSize="20" Width="150" Margin="5"/>
+            <Button Name="ComputeButton" Content="Compute Output" Click="ComputeButton_Click" Width="150" FontSize="20" Margin="5"/>
+            <Button Name="InvertButton" Content="Invert Output" Click="InvertButton_Click" FontSize="20" Width="150" Margin="5"/>
+            <StackPanel x:Name="ShiftPanel" Visibility="Collapsed">
+                <Label Content="Shift count:" Margin="5" FontSize="20" Width="100"/>
+                <TextBox Name="ShiftValue" Width="200" FontSize="20" Margin="5"/>
+                <Button Name="ShiftButton" Content="Shift Register" Click="ShiftButton_Click" FontSize="20" Width="150" Margin="5" />
+            </StackPanel>
             
-            <TextBlock Name="OutputResult" Text="Output: " FontWeight="Bold" Margin="5"/>
-            
+            <CheckBox Name="RegisterState" Margin="5" Width="150" Visibility="Collapsed" FontSize="20" Content="Set State" 
+                      Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked" />
+
+            <TextBlock Name="OutputResult" Text="Output: " FontWeight="Bold" FontSize="20" Margin="5"/>
+            <TextBlock Name="OutputAllTriggersInRegister" Text="Triggers: " FontWeight="Bold" FontSize="20" Margin="5"/>
+
             <!-- Кнопки сохранения и загрузки -->
-            <Button Name="SaveButton" Content="Save State" Click="SaveButton_Click" Width="150" Margin="5"/>
-            <Button Name="LoadButton" Content="Load State" Click="LoadButton_Click" Width="150" Margin="5"/>
+            <Button Name="SaveButton" Content="Save State" Click="SaveButton_Click" FontSize="20" Width="150" Margin="5"/>
+            <Button Name="LoadButton" Content="Load State" Click="LoadButton_Click" FontSize="20"  Width="150" Margin="5"/>
+            <Image Height="40" Width="568" Source="/image.png" Margin="0 20 0 0"/>
         </StackPanel>
     </Grid>
 </Window>
