--- a/Lab6/Lab6/MainWindow.xaml
+++ b/Lab6/Lab6/MainWindow.xaml
@@ -1,10 +1,37 @@
 ﻿<Window x:Class="Lab6.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Предметный указатель" Height="450" Width="800">
+        Title="Subject Index" Height="729" Width="936">
     <Grid>
-        <ListBox Name="IndexList" HorizontalAlignment="Left" Height="200" VerticalAlignment="Top" Width="300"/>
-        <Button Name="AddButton" Content="Добавить элемент" HorizontalAlignment="Left" VerticalAlignment="Top" Width="150" Height="30" Click="AddButton_Click"/>
-        <Button Name="SortButton" Content="Сортировать" HorizontalAlignment="Left" VerticalAlignment="Top" Width="150" Height="30" Margin="0,40,0,0" Click="SortButton_Click"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="341*"/>
+            <ColumnDefinition Width="184*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+
+        <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="10,10,10,10" Grid.ColumnSpan="2">
+            <Label Content="Слово:" FontSize="20"/>
+            <TextBox x:Name="wordTextBox" Width="100" FontSize="20" Margin="5"/>
+            <Label Content="Страницы (через запятую):" FontSize="20"/>
+            <TextBox x:Name="pagesTextBox" Width="200" FontSize="20" Margin="5"/>
+            <Button Content="Добавить" Click="AddButton_Click" FontSize="20" Width="99" Margin="5"/>
+        </StackPanel>
+
+        <ListBox x:Name="subjectIndexListBox" FontSize="16" Grid.Row="1" Margin="10,10,10,10" Grid.ColumnSpan="2"/>
+
+        <StackPanel Orientation="Horizontal" Grid.Row="2" Margin="10,10,10,10" Grid.ColumnSpan="2">
+            <Button Content="Удалить" Click="DeleteButton_Click" FontSize="20" Width="100" Margin="5"/>
+            <Button Content="Загрузить с файла" Click="LoadFromFileButton_Click" FontSize="20" Width="189" Margin="5"/>
+            <Button Content="Сортировать по слову" Click="SortButton_Click" Width="224" FontSize="20" Margin="5"/>
+            <Button Content="Сортировать по количеству страниц" Click="SortByPageButton_Click" Width="357" FontSize="20" Margin="5"/>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" Grid.Row="3" Margin="10,10,10,10" Grid.ColumnSpan="2">
+            <Image Height="306" Width="899" Source="/5247025958156887264.jpg"/>
+        </StackPanel>
     </Grid>
 </Window>
