--- a/lab7/lab7/MainWindow.xaml
+++ b/lab7/lab7/MainWindow.xaml
@@ -1,15 +1,16 @@
 ﻿<Window x:Class="lab7.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Birthday App" Height="400" Width="600">
+        Title="Birthday App" Height="598" Width="1526">
 
     <Grid Margin="10">
         <!-- Две колонки: левая для ввода и поиска, правая для отображения записей -->
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*"/>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="3*"/>
             <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
-        
+
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
@@ -19,8 +20,8 @@
             <!-- Поля ввода данных с подсказками -->
             <!-- Фамилия и инициалы -->
             <Grid>
-                <TextBox x:Name="FullNameTextBox" Margin="0,5"/>
-                <Label Content="Фамилия и инициалы" Foreground="Gray" 
+                <TextBox x:Name="FullNameTextBox" FontSize="20" Margin="0,5"/>
+                <Label Content="Фамилия и инициалы" FontSize="20" Foreground="Gray" 
                        IsHitTestVisible="False" 
                        HorizontalAlignment="Left" VerticalAlignment="Center"
                        Margin="5,0,0,0"
@@ -30,8 +31,8 @@
 
             <!-- Номер телефона -->
             <Grid>
-                <TextBox x:Name="PhoneTextBox" Margin="0,5"/>
-                <Label Content="Номер телефона" Foreground="Gray" 
+                <TextBox x:Name="PhoneTextBox" FontSize="20" Margin="0,5"/>
+                <Label Content="Номер телефона" FontSize="20" Foreground="Gray" 
                        IsHitTestVisible="False" 
                        HorizontalAlignment="Left" VerticalAlignment="Center"
                        Margin="5,0,0,0"
@@ -41,8 +42,8 @@
 
             <!-- День рождения -->
             <Grid>
-                <TextBox x:Name="DayTextBox" Margin="0,5"/>
-                <Label Content="День рождения" Foreground="Gray" 
+                <TextBox x:Name="DayTextBox" FontSize="20" Margin="0,5"/>
+                <Label Content="День рождения" FontSize="20" Foreground="Gray" 
                        IsHitTestVisible="False" 
                        HorizontalAlignment="Left" VerticalAlignment="Center"
                        Margin="5,0,0,0"
@@ -52,8 +53,8 @@
 
             <!-- Месяц рождения -->
             <Grid>
-                <TextBox x:Name="MonthTextBox" Margin="0,5"/>
-                <Label Content="Месяц рождения" Foreground="Gray" 
+                <TextBox x:Name="MonthTextBox" FontSize="20" Margin="0,5"/>
+                <Label Content="Месяц рождения" FontSize="20" Foreground="Gray" 
                        IsHitTestVisible="False" 
                        HorizontalAlignment="Left" VerticalAlignment="Center"
                        Margin="5,0,0,0"
@@ -63,8 +64,8 @@
 
             <!-- Год рождения -->
             <Grid>
-                <TextBox x:Name="YearTextBox" Margin="0,5"/>
-                <Label Content="Год рождения" Foreground="Gray" 
+                <TextBox x:Name="YearTextBox" FontSize="20" Margin="0,5"/>
+                <Label Content="Год рождения" FontSize="20" Foreground="Gray" 
                        IsHitTestVisible="False" 
                        HorizontalAlignment="Left" VerticalAlignment="Center"
                        Margin="5,0,0,0"
@@ -73,12 +74,12 @@
             </Grid>
 
             <!-- Кнопка добавления записи -->
-            <Button Content="Добавить запись" Click="AddNote_Click" Margin="0,5"/>
+            <Button Content="Добавить запись" FontSize="20" Click="AddNote_Click" Margin="0,5"/>
 
             <!-- Поля для поиска и вывода результатов -->
             <Grid>
-                <TextBox x:Name="MonthSearchTextBox" Margin="0,5"/>
-                <Label Content="Введите месяц (1-12)" Foreground="Gray" 
+                <TextBox x:Name="MonthSearchTextBox" FontSize="20" Margin="0,5"/>
+                <Label Content="Введите месяц (1-12)" FontSize="20" Foreground="Gray" 
                        IsHitTestVisible="False" 
                        HorizontalAlignment="Left" VerticalAlignment="Center"
                        Margin="5,0,0,0"
@@ -87,17 +88,18 @@
             </Grid>
 
             <!-- Кнопка поиска и поле для вывода результатов -->
-            <Button Content="Поиск по месяцу" Click="SearchByMonth_Click" Margin="0,5"/>
-            <TextBox x:Name="ResultsTextBox" IsReadOnly="True" VerticalScrollBarVisibility="Auto" Margin="0,5"/>
+            <Button Content="Поиск по месяцу" FontSize="20" Click="SearchByMonth_Click" Margin="0,5"/>
+            <TextBox x:Name="ResultsTextBox" FontSize="16" IsReadOnly="True" VerticalScrollBarVisibility="Auto" Margin="0,5"/>
         </StackPanel>
 
         <!-- Правая колонка для отображения всех записей -->
-        <ListBox x:Name="NotesListBox" Grid.Column="1" Margin="10,0,0,0">
+        <ListBox x:Name="NotesListBox" FontSize="16" Grid.Column="1" Margin="10,0,0,0">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding}" FontSize="14" Margin="5"/>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+        <Image Grid.Column="2" HorizontalAlignment="Left" Height="552" Margin="7,0,0,0" VerticalAlignment="Top" Width="485" Source="/5267369921157916275.jpg"/>
     </Grid>
 </Window>
